--- a/index.html
+++ b/index.html
@@ -1,7 +1,259 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
+
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous"> -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
+
+  <title>Hello, world!</title>
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>My website on GitHub Pages. It works!</p>
+
+
+  <div class="container nav-container">
+    <nav class="navbar navbar-expand-md fixed-top">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="container">
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+          <li class="nav-item">
+            <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Новини</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Магазини</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Розваги</a>
+          </li>
+        </ul>
+
+      </div>
+      </div>
+    </nav>
+  </div>
+
+  <div class="container-fluid">
+    <div class="row">
+        <div class="tab-content container" id="pills-tabContent">
+          <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+            <div class="row">
+             <div class="col-sm">
+               <ul id="">
+                 <span class="badge badge-danger">Підгрупа</span>
+                 <hr>
+                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/">Github</a></li>
+                 <li><img class="icon" src="img/rozetka.ico" alt="rezetka"><a href="https://rozetka.com.ua/ua/">Розетка</a></li>
+                 <li><img class="icon" src="img/work.ico" alt="work"><a href="https://www.work.ua">Work</a></li>
+                 <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/">Youtube</a></li>
+                 <li><img class="icon" src="img/duolingo.ico" alt="doulingo"><a href="https://www.duolingo.com/">Duolingo</a></li>
+                 <li><img class="icon" src="img/nnm-club.ico" alt="nnm-club"><a href="http://nnm-club.me/">Nnm-club</a></li>
+                 <li><img class="icon" src="img/gmail.ico" alt="gmail"><a href="https://mail.google.com">Gmail</a></li>
+                 <li><img class="icon" src="img/lostfilm.ico" alt="lostfilm"><a href="https://www.lostfilm.tv/">Lostfilm</a></li>
+                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/">Github</a></li>
+                 <li><img class="icon" src="img/rozetka.ico" alt="rezetka"><a href="https://rozetka.com.ua/ua/">Розетка</a></li>
+                 <li><img class="icon" src="img/work.ico" alt="work"><a href="https://www.work.ua">Work</a></li>
+                 <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/">Youtube</a></li>
+                 <li><img class="icon" src="img/duolingo.ico" alt="doulingo"><a href="https://www.duolingo.com/">Duolingo</a></li>
+                 <li><img class="icon" src="img/nnm-club.ico" alt="nnm-club"><a href="http://nnm-club.me/">Nnm-club</a></li>
+                 <li><img class="icon" src="img/gmail.ico" alt="gmail"><a href="https://mail.google.com">Gmail</a></li>
+                 <li><img class="icon" src="img/lostfilm.ico" alt="lostfilm"><a href="https://www.lostfilm.tv/">Lostfilm</a></li>
+               </ul>
+             </div>
+             <div class="col-sm">
+               <ul id="">
+                 <span class="badge badge-primary">Підгрупа</span>
+                 <hr>
+                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/">Github</a></li>
+                 <li><img class="icon" src="img/rozetka.ico" alt="rezetka"><a href="https://rozetka.com.ua/ua/">Розетка</a></li>
+                 <li><img class="icon" src="img/work.ico" alt="work"><a href="https://www.work.ua">Work</a></li>
+                 <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/">Youtube</a></li>
+                 <li><img class="icon" src="img/duolingo.ico" alt="doulingo"><a href="https://www.duolingo.com/">Duolingo</a></li>
+                 <li><img class="icon" src="img/nnm-club.ico" alt="nnm-club"><a href="http://nnm-club.me/">Nnm-club</a></li>
+                 <li><img class="icon" src="img/gmail.ico" alt="gmail"><a href="https://mail.google.com">Gmail</a></li>
+                 <li><img class="icon" src="img/lostfilm.ico" alt="lostfilm"><a href="https://www.lostfilm.tv/">Lostfilm</a></li>
+                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/">Github</a></li>
+                 <li><img class="icon" src="img/rozetka.ico" alt="rezetka"><a href="https://rozetka.com.ua/ua/">Розетка</a></li>
+               </ul>
+               <ul id="">
+                 <span class="badge badge-dark">Підгрупа</span>
+                 <hr>
+                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/">Github</a></li>
+                 <li><img class="icon" src="img/rozetka.ico" alt="rezetka"><a href="https://rozetka.com.ua/ua/">Розетка</a></li>
+                 <li><img class="icon" src="img/work.ico" alt="work"><a href="https://www.work.ua">Work</a></li>
+                 <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/">Youtube</a></li>
+                 <li><img class="icon" src="img/duolingo.ico" alt="doulingo"><a href="https://www.duolingo.com/">Duolingo</a></li>
+                 <li><img class="icon" src="img/nnm-club.ico" alt="nnm-club"><a href="http://nnm-club.me/">Nnm-club</a></li>
+                 <li><img class="icon" src="img/gmail.ico" alt="gmail"><a href="https://mail.google.com">Gmail</a></li>
+               </ul>
+             </div>
+             <div class="col-sm">
+               <ul id="">
+                 <span class="badge badge-warning">Підгрупа</span>
+                 <hr>
+                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/">Github</a></li>
+                 <li><img class="icon" src="img/rozetka.ico" alt="rezetka"><a href="https://rozetka.com.ua/ua/">Розетка</a></li>
+                 <li><img class="icon" src="img/work.ico" alt="work"><a href="https://www.work.ua">Work</a></li>
+                 <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/">Youtube</a></li>
+
+                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/">Github</a></li>
+                 <li><img class="icon" src="img/rozetka.ico" alt="rezetka"><a href="https://rozetka.com.ua/ua/">Розетка</a></li>
+               </ul>
+               <ul id="">
+                 <span class="badge badge-success">Підгрупа</span>
+                 <hr>
+                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/">Github</a></li>
+                 <li><img class="icon" src="img/rozetka.ico" alt="rezetka"><a href="https://rozetka.com.ua/ua/">Розетка</a></li>
+                 <li><img class="icon" src="img/work.ico" alt="work"><a href="https://www.work.ua">Work</a></li>
+                 <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/">Youtube</a></li>
+                 <li><img class="icon" src="img/duolingo.ico" alt="doulingo"><a href="https://www.duolingo.com/">Duolingo</a></li>
+                 <li><img class="icon" src="img/nnm-club.ico" alt="nnm-club"><a href="http://nnm-club.me/">Nnm-club</a></li>
+                 <li><img class="icon" src="img/gmail.ico" alt="gmail"><a href="https://mail.google.com">Gmail</a></li>
+                 <li><img class="icon" src="img/duolingo.ico" alt="doulingo"><a href="https://www.duolingo.com/">Duolingo</a></li>
+                 <li><img class="icon" src="img/nnm-club.ico" alt="nnm-club"><a href="http://nnm-club.me/">Nnm-club</a></li>
+                 <li><img class="icon" src="img/gmail.ico" alt="gmail"><a href="https://mail.google.com">Gmail</a></li>
+                 <li><img class="icon" src="img/lostfilm.ico" alt="lostfilm"><a href="https://www.lostfilm.tv/">Lostfilm</a></li>
+                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/">Github</a></li>
+                 <li><img class="icon" src="img/rozetka.ico" alt="rezetka"><a href="https://rozetka.com.ua/ua/">Розетка</a></li>
+               </ul>
+               <ul id="">
+                 <span class="badge badge-primary">Підгрупа</span>
+                 <hr>
+                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/">Github</a></li>
+                 <li><img class="icon" src="img/rozetka.ico" alt="rezetka"><a href="https://rozetka.com.ua/ua/">Розетка</a></li>
+                 <li><img class="icon" src="img/work.ico" alt="work"><a href="https://www.work.ua">Work</a></li>
+                 <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/">Youtube</a></li>
+
+               </ul>
+
+             </div>
+           </div>
+
+          </div>
+          <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+            <div class="row">
+             <div class="col-sm">
+               <ul id="">
+                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/">Github</a></li>
+                 <li><img class="icon" src="img/rozetka.ico" alt="rezetka"><a href="https://rozetka.com.ua/ua/">Розетка</a></li>
+                 <li><img class="icon" src="img/work.ico" alt="work"><a href="https://www.work.ua">Work</a></li>
+                 <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/">Youtube</a></li>
+                 <li><img class="icon" src="img/duolingo.ico" alt="doulingo"><a href="https://www.duolingo.com/">Duolingo</a></li>
+                 <li><img class="icon" src="img/nnm-club.ico" alt="nnm-club"><a href="http://nnm-club.me/">Nnm-club</a></li>
+                 <li><img class="icon" src="img/gmail.ico" alt="gmail"><a href="https://mail.google.com">Gmail</a></li>
+                 <li><img class="icon" src="img/duolingo.ico" alt="doulingo"><a href="https://www.duolingo.com/">Duolingo</a></li>
+                 <li><img class="icon" src="img/nnm-club.ico" alt="nnm-club"><a href="http://nnm-club.me/">Nnm-club</a></li>
+                 <li><img class="icon" src="img/gmail.ico" alt="gmail"><a href="https://mail.google.com">Gmail</a></li>
+                 <li><img class="icon" src="img/lostfilm.ico" alt="lostfilm"><a href="https://www.lostfilm.tv/">Lostfilm</a></li>
+               </ul>
+             </div>
+             <div class="col-sm">
+               <ul id="">
+                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/">Github</a></li>
+                 <li><img class="icon" src="img/rozetka.ico" alt="rezetka"><a href="https://rozetka.com.ua/ua/">Розетка</a></li>
+                 <li><img class="icon" src="img/work.ico" alt="work"><a href="https://www.work.ua">Work</a></li>
+                 <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/">Youtube</a></li>
+                 <li><img class="icon" src="img/duolingo.ico" alt="doulingo"><a href="https://www.duolingo.com/">Duolingo</a></li>
+                 <li><img class="icon" src="img/nnm-club.ico" alt="nnm-club"><a href="http://nnm-club.me/">Nnm-club</a></li>
+                 <li><img class="icon" src="img/gmail.ico" alt="gmail"><a href="https://mail.google.com">Gmail</a></li>
+                 <li><img class="icon" src="img/lostfilm.ico" alt="lostfilm"><a href="https://www.lostfilm.tv/">Lostfilm</a></li>
+                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/">Github</a></li>
+                 <li><img class="icon" src="img/rozetka.ico" alt="rezetka"><a href="https://rozetka.com.ua/ua/">Розетка</a></li>
+                 <li><img class="icon" src="img/lostfilm.ico" alt="lostfilm"><a href="https://www.lostfilm.tv/">Lostfilm</a></li>
+                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/">Github</a></li>
+                 <li><img class="icon" src="img/rozetka.ico" alt="rezetka"><a href="https://rozetka.com.ua/ua/">Розетка</a></li>
+                 <li><img class="icon" src="img/work.ico" alt="work"><a href="https://www.work.ua">Work</a></li>
+                 <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/">Youtube</a></li>
+               </ul>
+             </div>
+             <div class="col-sm">
+               One of three columns
+             </div>
+           </div>
+          </div>
+          <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
+            <div class="row">
+             <div class="col-sm">
+               <ul id="">
+                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/">Github</a></li>
+                 <li><img class="icon" src="img/rozetka.ico" alt="rezetka"><a href="https://rozetka.com.ua/ua/">Розетка</a></li>
+                 <li><img class="icon" src="img/work.ico" alt="work"><a href="https://www.work.ua">Work</a></li>
+                 <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/">Youtube</a></li>
+                 <li><img class="icon" src="img/duolingo.ico" alt="doulingo"><a href="https://www.duolingo.com/">Duolingo</a></li>
+                 <li><img class="icon" src="img/nnm-club.ico" alt="nnm-club"><a href="http://nnm-club.me/">Nnm-club</a></li>
+                 <li><img class="icon" src="img/gmail.ico" alt="gmail"><a href="https://mail.google.com">Gmail</a></li>
+                 <li><img class="icon" src="img/lostfilm.ico" alt="lostfilm"><a href="https://www.lostfilm.tv/">Lostfilm</a></li>
+                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/">Github</a></li>
+                 <li><img class="icon" src="img/rozetka.ico" alt="rezetka"><a href="https://rozetka.com.ua/ua/">Розетка</a></li>
+                 <li><img class="icon" src="img/work.ico" alt="work"><a href="https://www.work.ua">Work</a></li>
+                 <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/">Youtube</a></li>
+                 <li><img class="icon" src="img/duolingo.ico" alt="doulingo"><a href="https://www.duolingo.com/">Duolingo</a></li>
+                 <li><img class="icon" src="img/nnm-club.ico" alt="nnm-club"><a href="http://nnm-club.me/">Nnm-club</a></li>
+                 <li><img class="icon" src="img/gmail.ico" alt="gmail"><a href="https://mail.google.com">Gmail</a></li>
+                 <li><img class="icon" src="img/lostfilm.ico" alt="lostfilm"><a href="https://www.lostfilm.tv/">Lostfilm</a></li>
+               </ul>
+             </div>
+             <div class="col-sm">
+
+             </div>
+             <div class="col-sm">
+               <ul id="">
+                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/">Github</a></li>
+                 <li><img class="icon" src="img/rozetka.ico" alt="rezetka"><a href="https://rozetka.com.ua/ua/">Розетка</a></li>
+                 <li><img class="icon" src="img/work.ico" alt="work"><a href="https://www.work.ua">Work</a></li>
+                 <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/">Youtube</a></li>
+                 <li><img class="icon" src="img/duolingo.ico" alt="doulingo"><a href="https://www.duolingo.com/">Duolingo</a></li>
+                 <li><img class="icon" src="img/nnm-club.ico" alt="nnm-club"><a href="http://nnm-club.me/">Nnm-club</a></li>
+                 <li><img class="icon" src="img/gmail.ico" alt="gmail"><a href="https://mail.google.com">Gmail</a></li>
+                 <li><img class="icon" src="img/lostfilm.ico" alt="lostfilm"><a href="https://www.lostfilm.tv/">Lostfilm</a></li>
+                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/">Github</a></li>
+                 <li><img class="icon" src="img/rozetka.ico" alt="rezetka"><a href="https://rozetka.com.ua/ua/">Розетка</a></li>
+               </ul>
+             </div>
+           </div>
+         </div>
+        </div>
+
+      </div>
+
+  </div>
+
+
+
+  <!-- <ul class="nav nav-tabs">
+    <li class="active"><a data-toggle="tab" href="#home">Home</a></li>
+    <li><a data-toggle="tab" href="#menu1">Menu 1</a></li>
+    <li><a data-toggle="tab" href="#menu2">Menu 2</a></li>
+  </ul>
+
+  <div class="tab-content">
+    <div id="home" class="tab-pane fade in active">
+      <h3>HOME</h3>
+      <p>Some content.</p>
+    </div>
+    <div id="menu1" class="tab-pane fade">
+      <h3>Menu 1</h3>
+      <p>Some content in menu 1.</p>
+    </div>
+    <div id="menu2" class="tab-pane fade">
+      <h3>Menu 2</h3>
+      <p>Some content in menu 2.</p>
+    </div>
+  </div> -->
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 </body>
+
 </html>
