--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
   <div class="container nav-container">
-    <nav class="navbar navbar-expand-md fixed-top">
+    <nav class="navbar navbar-expand-md fixed-top navbar-light" style="background-color: #e3f2fd;">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -40,9 +40,7 @@
       </div>
     </nav>
   </div>
-
-  <hr>
-
+  
   <div class="container-fluid">
     <div class="row">
         <div class="tab-content container" id="pills-tabContent">
