--- a/index.html
+++ b/index.html
@@ -26,13 +26,16 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
           <li class="nav-item">
-            <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Главная</a>
+            <a class="nav-link active" id="glavnaya-tab" data-toggle="pill" href="#glavnaya" role="tab" aria-controls="glavnaya" aria-selected="true">Главная</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Соц.сети+почта</a>
+            <a class="nav-link" id="sosseti-tab" data-toggle="pill" href="#sosseti" role="tab" aria-controls="sosseti" aria-selected="false">Соц.сети+почта</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab" aria-controls="pills-contact" aria-selected="false">Новости</a>
+            <a class="nav-link" id="news-tab" data-toggle="pill" href="#news" role="tab" aria-controls="news" aria-selected="false">Новости</a>
+          </li>
+		  <li class="nav-item">
+            <a class="nav-link" id="media-tab" data-toggle="pill" href="#media" role="tab" aria-controls="media" aria-selected="false">Медиа</a>
           </li>
         </ul>
 
@@ -44,7 +47,7 @@
   <div class="container-fluid">
     <div class="row">
         <div class="tab-content container" id="pills-tabContent">
-          <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+          <div class="tab-pane fade show active" id="glavnaya" role="tabpanel" aria-labelledby="glavnaya-tab">
             <div class="row">
              <div class="col-sm">
                <ul id="">
@@ -138,7 +141,7 @@
            </div>
 
           </div>
-          <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+          <div class="tab-pane fade" id="sosseti" role="tabpanel" aria-labelledby="sosseti-tab">
             <div class="row">
              <div class="col-sm">
                <ul id="">
@@ -179,7 +182,7 @@
              </div>
            </div>
           </div>
-          <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
+          <div class="tab-pane fade" id="news" role="tabpanel" aria-labelledby="news-tab">
             <div class="row">
              <div class="col-sm">
                <ul id="">
@@ -220,6 +223,102 @@
              </div>
            </div>
          </div>
+          <div class="tab-pane fade" id="media" role="tabpanel" aria-labelledby="media-tab">
+            <div class="row">
+             <div class="col-sm">
+               <ul id="">
+                 <span class="badge badge-danger">Підгрупа</span>
+                 <hr>
+                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/">Github</a></li>
+                 <li><img class="icon" src="img/rozetka.ico" alt="rezetka"><a href="https://rozetka.com.ua/ua/">Розетка</a></li>
+                 <li><img class="icon" src="img/work.ico" alt="work"><a href="https://www.work.ua">Work</a></li>
+                 <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/">Youtube</a></li>
+                 <li><img class="icon" src="img/duolingo.ico" alt="doulingo"><a href="https://www.duolingo.com/">Duolingo</a></li>
+                 <li><img class="icon" src="img/nnm-club.ico" alt="nnm-club"><a href="http://nnm-club.me/">Nnm-club</a></li>
+                 <li><img class="icon" src="img/gmail.ico" alt="gmail"><a href="https://mail.google.com">Gmail</a></li>
+                 <li><img class="icon" src="img/lostfilm.ico" alt="lostfilm"><a href="https://www.lostfilm.tv/">Lostfilm</a></li>
+                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/">Github</a></li>
+                 <li><img class="icon" src="img/rozetka.ico" alt="rezetka"><a href="https://rozetka.com.ua/ua/">Розетка</a></li>
+                 <li><img class="icon" src="img/work.ico" alt="work"><a href="https://www.work.ua">Work</a></li>
+                 <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/">Youtube</a></li>
+                 <li><img class="icon" src="img/duolingo.ico" alt="doulingo"><a href="https://www.duolingo.com/">Duolingo</a></li>
+                 <li><img class="icon" src="img/nnm-club.ico" alt="nnm-club"><a href="http://nnm-club.me/">Nnm-club</a></li>
+                 <li><img class="icon" src="img/gmail.ico" alt="gmail"><a href="https://mail.google.com">Gmail</a></li>
+                 <li><img class="icon" src="img/lostfilm.ico" alt="lostfilm"><a href="https://www.lostfilm.tv/">Lostfilm</a></li>
+               </ul>
+             </div>
+             <div class="col-sm">
+               <ul id="">
+                 <span class="badge badge-primary">Підгрупа</span>
+                 <hr>
+                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/">Github</a></li>
+                 <li><img class="icon" src="img/rozetka.ico" alt="rezetka"><a href="https://rozetka.com.ua/ua/">Розетка</a></li>
+                 <li><img class="icon" src="img/work.ico" alt="work"><a href="https://www.work.ua">Work</a></li>
+                 <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/">Youtube</a></li>
+                 <li><img class="icon" src="img/duolingo.ico" alt="doulingo"><a href="https://www.duolingo.com/">Duolingo</a></li>
+                 <li><img class="icon" src="img/nnm-club.ico" alt="nnm-club"><a href="http://nnm-club.me/">Nnm-club</a></li>
+                 <li><img class="icon" src="img/gmail.ico" alt="gmail"><a href="https://mail.google.com">Gmail</a></li>
+                 <li><img class="icon" src="img/lostfilm.ico" alt="lostfilm"><a href="https://www.lostfilm.tv/">Lostfilm</a></li>
+                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/">Github</a></li>
+                 <li><img class="icon" src="img/rozetka.ico" alt="rezetka"><a href="https://rozetka.com.ua/ua/">Розетка</a></li>
+               </ul>
+               <ul id="">
+                 <span class="badge badge-dark">Підгрупа</span>
+                 <hr>
+                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/">Github</a></li>
+                 <li><img class="icon" src="img/rozetka.ico" alt="rezetka"><a href="https://rozetka.com.ua/ua/">Розетка</a></li>
+                 <li><img class="icon" src="img/work.ico" alt="work"><a href="https://www.work.ua">Work</a></li>
+                 <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/">Youtube</a></li>
+                 <li><img class="icon" src="img/duolingo.ico" alt="doulingo"><a href="https://www.duolingo.com/">Duolingo</a></li>
+                 <li><img class="icon" src="img/nnm-club.ico" alt="nnm-club"><a href="http://nnm-club.me/">Nnm-club</a></li>
+                 <li><img class="icon" src="img/gmail.ico" alt="gmail"><a href="https://mail.google.com">Gmail</a></li>
+               </ul>
+             </div>
+             <div class="col-sm">
+               <ul id="">
+                 <span class="badge badge-warning">Підгрупа</span>
+                 <hr>
+                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/">Github</a></li>
+                 <li><img class="icon" src="img/rozetka.ico" alt="rezetka"><a href="https://rozetka.com.ua/ua/">Розетка</a></li>
+                 <li><img class="icon" src="img/work.ico" alt="work"><a href="https://www.work.ua">Work</a></li>
+                 <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/">Youtube</a></li>
+
+                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/">Github</a></li>
+                 <li><img class="icon" src="img/rozetka.ico" alt="rezetka"><a href="https://rozetka.com.ua/ua/">Розетка</a></li>
+               </ul>
+               <ul id="">
+                 <span class="badge badge-success">Підгрупа</span>
+                 <hr>
+                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/">Github</a></li>
+                 <li><img class="icon" src="img/rozetka.ico" alt="rezetka"><a href="https://rozetka.com.ua/ua/">Розетка</a></li>
+                 <li><img class="icon" src="img/work.ico" alt="work"><a href="https://www.work.ua">Work</a></li>
+                 <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/">Youtube</a></li>
+                 <li><img class="icon" src="img/duolingo.ico" alt="doulingo"><a href="https://www.duolingo.com/">Duolingo</a></li>
+                 <li><img class="icon" src="img/nnm-club.ico" alt="nnm-club"><a href="http://nnm-club.me/">Nnm-club</a></li>
+                 <li><img class="icon" src="img/gmail.ico" alt="gmail"><a href="https://mail.google.com">Gmail</a></li>
+                 <li><img class="icon" src="img/duolingo.ico" alt="doulingo"><a href="https://www.duolingo.com/">Duolingo</a></li>
+                 <li><img class="icon" src="img/nnm-club.ico" alt="nnm-club"><a href="http://nnm-club.me/">Nnm-club</a></li>
+                 <li><img class="icon" src="img/gmail.ico" alt="gmail"><a href="https://mail.google.com">Gmail</a></li>
+                 <li><img class="icon" src="img/lostfilm.ico" alt="lostfilm"><a href="https://www.lostfilm.tv/">Lostfilm</a></li>
+                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/">Github</a></li>
+                 <li><img class="icon" src="img/rozetka.ico" alt="rezetka"><a href="https://rozetka.com.ua/ua/">Розетка</a></li>
+               </ul>
+               <ul id="">
+                 <span class="badge badge-primary">Підгрупа</span>
+                 <hr>
+                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/">Github</a></li>
+                 <li><img class="icon" src="img/rozetka.ico" alt="rezetka"><a href="https://rozetka.com.ua/ua/">Розетка</a></li>
+                 <li><img class="icon" src="img/work.ico" alt="work"><a href="https://www.work.ua">Work</a></li>
+                 <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/">Youtube</a></li>
+
+               </ul>
+
+             </div>
+           </div>
+
+          </div>
+
+
         </div>
 
       </div>
