--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           <li class="nav-item"><a class="nav-link" id="sosseti-tab" data-toggle="pill" href="#sosseti" role="tab" aria-controls="sosseti" aria-selected="false">Соц.сети+почта</a></li>
           <li class="nav-item"><a class="nav-link" id="news-tab" data-toggle="pill" href="#news" role="tab" aria-controls="news" aria-selected="false">Новости</a></li>
 		  <li class="nav-item"><a class="nav-link" id="media-tab" data-toggle="pill" href="#media" role="tab" aria-controls="media" aria-selected="false">Медиа</a></li>
+		  <li class="nav-item"><a class="nav-link" id="games-tab" data-toggle="pill" href="#games" role="tab" aria-controls="games" aria-selected="false">Игры</a></li>
         </ul>
 
       </div>
