--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@
                 <li><img class="icon" src="img/rozetka.ico" alt="rezetka"><a href="https://rozetka.com.ua/ua/" target="_blank">Розетка</a></li>
                 <li><img class="icon" src="img/work.ico" alt="work"><a href="https://www.work.ua" target="_blank">Work</a></li>
                 <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/" target="_blank">Youtube</a></li>
-
                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
                 <li><img class="icon" src="img/rozetka.ico" alt="rezetka"><a href="https://rozetka.com.ua/ua/" target="_blank">Розетка</a></li>
               </ul>
@@ -125,12 +124,9 @@
                 <li><img class="icon" src="img/rozetka.ico" alt="rezetka"><a href="https://rozetka.com.ua/ua/" target="_blank">Розетка</a></li>
                 <li><img class="icon" src="img/work.ico" alt="work"><a href="https://www.work.ua" target="_blank">Work</a></li>
                 <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/" target="_blank">Youtube</a></li>
-
               </ul>
-
             </div>
           </div>
-
         </div>
         <div class="tab-pane fade" id="sosseti" role="tabpanel" aria-labelledby="sosseti-tab">
           <div class="row">
@@ -298,49 +294,20 @@
                 <li><img class="icon" src="img/rozetka.ico" alt="rezetka"><a href="https://rozetka.com.ua/ua/" target="_blank">Розетка</a></li>
                 <li><img class="icon" src="img/work.ico" alt="work"><a href="https://www.work.ua" target="_blank">Work</a></li>
                 <li><img class="icon" src="img/youtube.ico" alt="youtube"><a href="https://www.youtube.com/" target="_blank">Youtube</a></li>
-
               </ul>
-
             </div>
           </div>
-
         </div>
-
-
       </div>
-
     </div>
-
   </div>
-
-
-
-  <!-- <ul class="nav nav-tabs">
-    <li class="active"><a data-toggle="tab" href="#home">Home</a></li>
-    <li><a data-toggle="tab" href="#menu1">Menu 1</a></li>
-    <li><a data-toggle="tab" href="#menu2">Menu 2</a></li>
-  </ul>
-
-  <div class="tab-content">
-    <div id="home" class="tab-pane fade in active">
-      <h3>HOME</h3>
-      <p>Some content.</p>
-    </div>
-    <div id="menu1" class="tab-pane fade">
-      <h3>Menu 1</h3>
-      <p>Some content in menu 1.</p>
-    </div>
-    <div id="menu2" class="tab-pane fade">
-      <h3>Menu 2</h3>
-      <p>Some content in menu 2.</p>
-    </div>
-  </div> -->
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
