--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </nav>
   </div>
 
-  <div class="container-fluid">
+  <div class="container-fluid main">
     <div class="row">
       <div class="tab-content container" id="pills-tabContent">
         <div class="tab-pane fade show active" id="glavnaya" role="tabpanel" aria-labelledby="glavnaya-tab">
@@ -301,6 +301,61 @@
       </div>
     </div>
   </div>
+
+  <footer class="footer mt-auto py-3 fixed-bottom">
+    <div class="container">
+      <div class="row">
+            <div class="col-sm">
+              1
+            </div>
+            <div class="col-sm">
+              2
+            </div>
+            <div class="col-sm">
+              3
+            </div>
+            <div class="col-sm">
+              <a href="javascript:counters(15)"><img src="https://counter.yadro.ru/logo?15.6" width="88" height="31" name="type_15" align="top" border="0" title="клікніть для вибору інших кольорів"></a>
+              <a href="javascript:counters(15)"><img src="https://counter.yadro.ru/logo?15.6" width="88" height="31" name="type_15" align="top" border="0" title="клікніть для вибору інших кольорів"></a>
+            </div>
+          </div>
+    </div>
+  </footer>
+
+  <!-- <footer class="">
+    <div class="l-footer wrap-min container-fluid">
+      <section class="m-footer-wrapper">
+        <div class="footer-nav ">
+          <ul class="no-list map">
+            <li><a href="/" class="nav-link current">Главная</a></li>
+            <li><a href="/doctrine" class="nav-link ">Учения</a></li>
+            <li><a href="/poetry" class="nav-link ">Поэзия</a></li>
+            <li><a href="/books" class="nav-link ">Книги</a></li>
+            <script type="text/javascript">
+              document.write("<a href='//www.liveinternet.ru/click' " +
+                "target=_blank><img src='//counter.yadro.ru/hit?t25.5;r" +
+                escape(document.referrer) + ((typeof(screen) == "undefined") ? "" :
+                  ";s" + screen.width + "*" + screen.height + "*" + (screen.colorDepth ?
+                    screen.colorDepth : screen.pixelDepth)) + ";u" + escape(document.URL) +
+                ";" + Math.random() +
+                "' alt='' title='LiveInternet: показане число відвідувачів за" +
+                " сьогодні' " +
+                "border='0' width='88' height='15'><\/a>")
+            </script><a href="//www.liveinternet.ru/click" target="_blank"><img src="//counter.yadro.ru/hit?t25.5;r;s1920*1080*24;uhttp%3A//slovohrista.org/;0.023035754639398887" alt="" title="LiveInternet: показане число відвідувачів за сьогодні"
+                border="0" width="88" height="15"></a>
+          </ul>
+        </div>
+        <div class="footer-logo">
+          <img src="/images/logo2.png" alt="Слово Христианина лого">
+        </div>
+        <div class="footer-contact">
+          <a href="skype:solomon25042005?chat">solomon25042005<i class="fa fa-skype fa-2x" aria-hidden="true"></i></a>
+          <a href="mailto:solomon50@ukr.net">solomon50@ukr.net<i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
+          <a href="https://telegram.me/slovohrista">Telegram<i class="fa fa-telegram fa-2x" aria-hidden="true"></i></a>
+        </div>
+      </section>
+    </div>
+  </footer> -->
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
