--- a/index.html
+++ b/index.html
@@ -306,13 +306,15 @@
     <div class="container">
       <div class="row">
             <div class="col-sm">
-              1
+			  1 - поділитися Твітер/Фейсбук/Телеграм/Скайп/Вайбер/Ок/Вк/
             </div>
             <div class="col-sm">
-              2
+              2 - ссилка на форум
+<br>		  2 - ссилка на сайт
             </div>
             <div class="col-sm">
-              3
+              3 - контакт (пошта)
+<br>		  3 - контакт (телеграм/скайп)
             </div>
             <div class="col-sm">
               <a href="javascript:counters(15)"><img src="https://counter.yadro.ru/logo?15.6" width="88" height="31" name="type_15" align="top" border="0" title="клікніть для вибору інших кольорів"></a>
