--- a/index.html
+++ b/index.html
@@ -358,8 +358,22 @@ screen.colorDepth:screen.pixelDepth))+";u"+escape(document.URL)+
 "border='0' width='88' height='31'><\/a>")
 </script><!--/LiveInternet-->
 			
-             
-              <a href="javascript:counters(15)"><img src="https://counter.yadro.ru/logo?15.6" width="88" height="31" name="type_15" align="top" border="0" title="клікніть для вибору інших кольорів"></a>
+<!-- HotLog -->
+<span id="hotlog_counter"></span>
+<span id="hotlog_dyn"></span>
+<script type="text/javascript"> var hot_s = document.createElement('script');
+hot_s.type = 'text/javascript'; hot_s.async = true;
+hot_s.src = 'http://js.hotlog.ru/dcounter/2575836.js';
+hot_d = document.getElementById('hotlog_dyn');
+hot_d.appendChild(hot_s);
+</script>
+<noscript>
+<a href="http://click.hotlog.ru/?2575836" target="_blank">
+<img src="http://hit20.hotlog.ru/cgi-bin/hotlog/count?s=2575836&im=501" border="0" 
+title="HotLog" alt="HotLog"></a>
+</noscript>
+<!-- /HotLog -->
+                           
             </div>
           </div>
     </div>
