--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 <br>		  2 - ссилка на сайт
             </div>
             <div class="col-sm">
-              3 - контакт (пошта)
+              3 - контакт (пошта1)
 <br>		  3 - контакт (телеграм/скайп)
             </div>
             <div class="col-sm">
