--- a/index.html
+++ b/index.html
@@ -361,16 +361,17 @@ screen.colorDepth:screen.pixelDepth))+";u"+escape(document.URL)+
 <!-- HotLog -->
 <span id="hotlog_counter"></span>
 <span id="hotlog_dyn"></span>
-<script type="text/javascript"> var hot_s = document.createElement('script');
+<script type="text/javascript">
+var hot_s = document.createElement('script');
 hot_s.type = 'text/javascript'; hot_s.async = true;
 hot_s.src = 'http://js.hotlog.ru/dcounter/2575836.js';
 hot_d = document.getElementById('hotlog_dyn');
 hot_d.appendChild(hot_s);
 </script>
 <noscript>
-<a href="http://click.hotlog.ru/?2575836" target="_blank">
-<img src="http://hit20.hotlog.ru/cgi-bin/hotlog/count?s=2575836&im=501" border="0" 
-title="HotLog" alt="HotLog"></a>
+<a href="http://click.hotlog.ru/?2575836" target="_blank"><img
+src="http://hit20.hotlog.ru/cgi-bin/hotlog/count?s=2575836&amp;im=501" border="0"
+alt="HotLog"></a>
 </noscript>
 <!-- /HotLog -->
                            
