--- a/index.html
+++ b/index.html
@@ -52,10 +52,19 @@
 
           <ul class="nav nav-pills mb-3 navbar-nav" id="pills-tab" role="tablist">
             <li class="nav-item"><a class="nav-link active" id="glavnaya-tab" data-toggle="pill" href="#glavnaya" role="tab" aria-controls="glavnaya" aria-selected="true">Главная</a></li>
-            <li class="nav-item"><a class="nav-link" id="sosseti-tab" data-toggle="pill" href="#sosseti" role="tab" aria-controls="sosseti" aria-selected="false">Соц.сети+почта</a></li>
+            <li class="nav-item"><a class="nav-link" id="sosseti-tab" data-toggle="pill" href="#sosseti" role="tab" aria-controls="sosseti" aria-selected="false">Социум</a></li>
             <li class="nav-item"><a class="nav-link" id="news-tab" data-toggle="pill" href="#news" role="tab" aria-controls="news" aria-selected="false">Новости</a></li>
             <li class="nav-item"><a class="nav-link" id="media-tab" data-toggle="pill" href="#media" role="tab" aria-controls="media" aria-selected="false">Медиа</a></li>
+			
             <li class="nav-item"><a class="nav-link" id="games-tab" data-toggle="pill" href="#games" role="tab" aria-controls="games" aria-selected="false">Игры</a></li>
+            <li class="nav-item"><a class="nav-link" id="games-tab" data-toggle="pill" href="#games" role="tab" aria-controls="games" aria-selected="false">Рынок</a></li>			
+            <li class="nav-item"><a class="nav-link" id="games-tab" data-toggle="pill" href="#games" role="tab" aria-controls="games" aria-selected="false">Магазины</a></li>
+            <li class="nav-item"><a class="nav-link" id="games-tab" data-toggle="pill" href="#games" role="tab" aria-controls="games" aria-selected="false">Магазины+</a></li>			
+            <li class="nav-item"><a class="nav-link" id="games-tab" data-toggle="pill" href="#games" role="tab" aria-controls="games" aria-selected="false">Банкинг</a></li>
+            <li class="nav-item"><a class="nav-link" id="games-tab" data-toggle="pill" href="#games" role="tab" aria-controls="games" aria-selected="false">Комуналка</a></li>
+            <li class="nav-item"><a class="nav-link" id="games-tab" data-toggle="pill" href="#games" role="tab" aria-controls="games" aria-selected="false">Другое</a></li>	
+            <li class="nav-item"><a class="nav-link" id="games-tab" data-toggle="pill" href="#games" role="tab" aria-controls="games" aria-selected="false">"Городок"</a></li>				
+            <li class="nav-item"><a class="nav-link" id="games-tab" data-toggle="pill" href="#games" role="tab" aria-controls="games" aria-selected="false">"Реклама"</a></li>				
           </ul>
 
         </div>
