--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 
 <body>
   <div class="container nav-container">
-    <nav class="navbar navbar-expand-md fixed-top navbar-light" style="background-color: #e3f2fd;">
+    <nav class="navbar navbar-expand-md fixed-top navbar-light d-flex justify-content-center" style="background-color: #e3f2fd;">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="container">
-        <div class="collapse navbar-collapse" id="navbarCollapse">
+      <div class="container-fluid">
+        <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarCollapse">
 
           <ul class="nav nav-pills mb-3 navbar-nav" id="pills-tab" role="tablist">
             <li class="nav-item"><a class="nav-link active" id="glavnaya-tab" data-toggle="pill" href="#glavnaya" role="tab" aria-controls="glavnaya" aria-selected="true">Главная</a></li>
