relize_menu_edit

--- a/index.html
+++ b/index.html
@@ -3,31 +3,41 @@
 
 <head>
 
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-55202239-3"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-55202239-3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'UA-55202239-3');
-</script>
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
 
-<!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+    gtag('config', 'UA-55202239-3');
+  </script>
 
-   ym(51863543, "init", {
-        id:51863543,
-        clickmap:true,
-        trackLinks:true,
-        accurateTrackBounce:true
-   });
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/51863543" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
+  <!-- Yandex.Metrika counter -->
+  <script type="text/javascript">
+    (function(m, e, t, r, i, k, a) {
+      m[i] = m[i] || function() {
+        (m[i].a = m[i].a || []).push(arguments)
+      };
+      m[i].l = 1 * new Date();
+      k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+    })
+    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+    ym(51863543, "init", {
+      id: 51863543,
+      clickmap: true,
+      trackLinks: true,
+      accurateTrackBounce: true
+    });
+  </script>
+  <noscript>
+    <div><img src="https://mc.yandex.ru/watch/51863543" style="position:absolute; left:-9999px;" alt="" /></div>
+  </noscript>
+  <!-- /Yandex.Metrika counter -->
 
 
   <!-- Required meta tags -->
@@ -48,23 +58,23 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="container-fluid">
-        <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarCollapse">
+        <div class="collapse navbar-collapse text-center" id="navbarCollapse">
 
           <ul class="nav nav-pills mb-3 navbar-nav" id="pills-tab" role="tablist">
             <li class="nav-item"><a class="nav-link active" id="glavnaya-tab" data-toggle="pill" href="#glavnaya" role="tab" aria-controls="glavnaya" aria-selected="true">Главная</a></li>
             <li class="nav-item"><a class="nav-link" id="sosseti-tab" data-toggle="pill" href="#sosseti" role="tab" aria-controls="sosseti" aria-selected="false">Социум</a></li>
             <li class="nav-item"><a class="nav-link" id="news-tab" data-toggle="pill" href="#news" role="tab" aria-controls="news" aria-selected="false">Новости</a></li>
             <li class="nav-item"><a class="nav-link" id="media-tab" data-toggle="pill" href="#media" role="tab" aria-controls="media" aria-selected="false">Медиа</a></li>
-			
+
             <li class="nav-item"><a class="nav-link" id="games-tab" data-toggle="pill" href="#games" role="tab" aria-controls="games" aria-selected="false">Игры</a></li>
-            <li class="nav-item"><a class="nav-link" id="games-tab" data-toggle="pill" href="#games" role="tab" aria-controls="games" aria-selected="false">Рынок</a></li>			
+            <li class="nav-item"><a class="nav-link" id="games-tab" data-toggle="pill" href="#games" role="tab" aria-controls="games" aria-selected="false">Рынок</a></li>
             <li class="nav-item"><a class="nav-link" id="games-tab" data-toggle="pill" href="#games" role="tab" aria-controls="games" aria-selected="false">Магазины</a></li>
-            <li class="nav-item"><a class="nav-link" id="games-tab" data-toggle="pill" href="#games" role="tab" aria-controls="games" aria-selected="false">Магазины+</a></li>			
+            <li class="nav-item"><a class="nav-link" id="games-tab" data-toggle="pill" href="#games" role="tab" aria-controls="games" aria-selected="false">Магазины+</a></li>
             <li class="nav-item"><a class="nav-link" id="games-tab" data-toggle="pill" href="#games" role="tab" aria-controls="games" aria-selected="false">Банкинг</a></li>
             <li class="nav-item"><a class="nav-link" id="games-tab" data-toggle="pill" href="#games" role="tab" aria-controls="games" aria-selected="false">Комуналка</a></li>
-            <li class="nav-item"><a class="nav-link" id="games-tab" data-toggle="pill" href="#games" role="tab" aria-controls="games" aria-selected="false">Другое</a></li>	
-            <li class="nav-item"><a class="nav-link" id="games-tab" data-toggle="pill" href="#games" role="tab" aria-controls="games" aria-selected="false">"Городок"</a></li>				
-            <li class="nav-item"><a class="nav-link" id="games-tab" data-toggle="pill" href="#games" role="tab" aria-controls="games" aria-selected="false">"Реклама"</a></li>				
+            <li class="nav-item"><a class="nav-link" id="games-tab" data-toggle="pill" href="#games" role="tab" aria-controls="games" aria-selected="false">Другое</a></li>
+            <li class="nav-item"><a class="nav-link" id="games-tab" data-toggle="pill" href="#games" role="tab" aria-controls="games" aria-selected="false">"Городок"</a></li>
+            <li class="nav-item"><a class="nav-link" id="games-tab" data-toggle="pill" href="#games" role="tab" aria-controls="games" aria-selected="false">"Реклама"</a></li>
           </ul>
 
         </div>
@@ -342,87 +352,53 @@
   <footer class="footer mt-auto py-3 fixed-bottom">
     <div class="container">
       <div class="row">
-            <div class="col-sm">
-			  1 - поділитися Твітер/Фейсбук/Телеграм/Скайп/Вайбер/Ок/Вк/
-            </div>
-            <div class="col-sm">
-              2 - ссилка на форум
-<br>		  2 - ссилка на сайт
-            </div>
-            <div class="col-sm">
-              3 - контакт (пошта1)
-<br>		  3 - контакт (телеграм/скайп)
-            </div>
-            <div class="col-sm">
-			
-<!--LiveInternet counter--><script type="text/javascript">
-document.write("<a href='//www.liveinternet.ru/click' "+
-"target=_blank><img src='//counter.yadro.ru/hit?t20.1;r"+
-escape(document.referrer)+((typeof(screen)=="undefined")?"":
-";s"+screen.width+"*"+screen.height+"*"+(screen.colorDepth?
-screen.colorDepth:screen.pixelDepth))+";u"+escape(document.URL)+
-";h"+escape(document.title.substring(0,150))+";"+Math.random()+
-"' alt='' title='LiveInternet: показано число просмотров за 24"+
-" часа, посетителей за 24 часа и за сегодня' "+
-"border='0' width='88' height='31'><\/a>")
-</script><!--/LiveInternet-->
-			
-<!-- HotLog -->
-<span id="hotlog_counter"></span>
-<span id="hotlog_dyn"></span>
-<script type="text/javascript">
-var hot_s = document.createElement('script');
-hot_s.type = 'text/javascript'; hot_s.async = true;
-hot_s.src = 'http://js.hotlog.ru/dcounter/2575836.js';
-hot_d = document.getElementById('hotlog_dyn');
-hot_d.appendChild(hot_s);
-</script>
-<noscript>
-<a href="http://click.hotlog.ru/?2575836" target="_blank"><img
-src="http://hit20.hotlog.ru/cgi-bin/hotlog/count?s=2575836&amp;im=501" border="0"
-alt="HotLog"></a>
-</noscript>
-<!-- /HotLog -->
-                           
-            </div>
-          </div>
+        <div class="col-sm">
+          1 - поділитися Твітер/Фейсбук/Телеграм/Скайп/Вайбер/Ок/Вк/
+        </div>
+        <div class="col-sm">
+          2 - ссилка на форум
+          <br> 2 - ссилка на сайт
+        </div>
+        <div class="col-sm">
+          3 - контакт (пошта1)
+          <br> 3 - контакт (телеграм/скайп)
+        </div>
+        <div class="col-sm">
+
+          <!--LiveInternet counter-->
+          <script type="text/javascript">
+            document.write("<a href='//www.liveinternet.ru/click' " +
+              "target=_blank><img src='//counter.yadro.ru/hit?t20.1;r" +
+              escape(document.referrer) + ((typeof(screen) == "undefined") ? "" :
+                ";s" + screen.width + "*" + screen.height + "*" + (screen.colorDepth ?
+                  screen.colorDepth : screen.pixelDepth)) + ";u" + escape(document.URL) +
+              ";h" + escape(document.title.substring(0, 150)) + ";" + Math.random() +
+              "' alt='' title='LiveInternet: показано число просмотров за 24" +
+              " часа, посетителей за 24 часа и за сегодня' " +
+              "border='0' width='88' height='31'><\/a>")
+          </script>
+          <!--/LiveInternet-->
+
+          <!-- HotLog -->
+          <span id="hotlog_counter"></span>
+          <span id="hotlog_dyn"></span>
+          <script type="text/javascript">
+            var hot_s = document.createElement('script');
+            hot_s.type = 'text/javascript';
+            hot_s.async = true;
+            hot_s.src = 'http://js.hotlog.ru/dcounter/2575836.js';
+            hot_d = document.getElementById('hotlog_dyn');
+            hot_d.appendChild(hot_s);
+          </script>
+          <noscript>
+            <a href="http://click.hotlog.ru/?2575836" target="_blank"><img src="http://hit20.hotlog.ru/cgi-bin/hotlog/count?s=2575836&amp;im=501" border="0" alt="HotLog"></a>
+          </noscript>
+          <!-- /HotLog -->
+
+        </div>
+      </div>
     </div>
   </footer>
-
-  <!-- <footer class="">
-    <div class="l-footer wrap-min container-fluid">
-      <section class="m-footer-wrapper">
-        <div class="footer-nav ">
-          <ul class="no-list map">
-            <li><a href="/" class="nav-link current">Главная</a></li>
-            <li><a href="/doctrine" class="nav-link ">Учения</a></li>
-            <li><a href="/poetry" class="nav-link ">Поэзия</a></li>
-            <li><a href="/books" class="nav-link ">Книги</a></li>
-            <script type="text/javascript">
-              document.write("<a href='//www.liveinternet.ru/click' " +
-                "target=_blank><img src='//counter.yadro.ru/hit?t25.5;r" +
-                escape(document.referrer) + ((typeof(screen) == "undefined") ? "" :
-                  ";s" + screen.width + "*" + screen.height + "*" + (screen.colorDepth ?
-                    screen.colorDepth : screen.pixelDepth)) + ";u" + escape(document.URL) +
-                ";" + Math.random() +
-                "' alt='' title='LiveInternet: показане число відвідувачів за" +
-                " сьогодні' " +
-                "border='0' width='88' height='15'><\/a>")
-            </script><a href="//www.liveinternet.ru/click" target="_blank"><img src="//counter.yadro.ru/hit?t25.5;r;s1920*1080*24;uhttp%3A//slovohrista.org/;0.023035754639398887" alt="" title="LiveInternet: показане число відвідувачів за сьогодні"
-                border="0" width="88" height="15"></a>
-          </ul>
-        </div>
-        <div class="footer-logo">
-          <img src="/images/logo2.png" alt="Слово Христианина лого">
-        </div>
-        <div class="footer-contact">
-          <a href="skype:solomon25042005?chat">solomon25042005<i class="fa fa-skype fa-2x" aria-hidden="true"></i></a>
-          <a href="mailto:solomon50@ukr.net">solomon50@ukr.net<i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
-          <a href="https://telegram.me/slovohrista">Telegram<i class="fa fa-telegram fa-2x" aria-hidden="true"></i></a>
-        </div>
-      </section>
-    </div>
-  </footer> -->
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
