--- a/index.html
+++ b/index.html
@@ -47,16 +47,21 @@
   <!-- Bootstrap CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+  <link href="css/hamburgers.min.css" rel="stylesheet">
+  <link href="css/menu_button.css" rel="stylesheet">
 
   <title>ZAKLADKI-список популярных сайтов</title>
 </head>
 
 <body>
   <div class="container nav-container">
-    <nav class="navbar navbar-expand-md fixed-top navbar-light d-flex justify-content-center" style="background-color: #e3f2fd;">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    <nav class="navbar navbar-expand-md fixed-top navbar-dark d-flex justify-content-center">
+      <div class="hamburger hamburger--spring navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <div class="hamburger-box">
+          <div class="hamburger-inner"></div>
+        </div>
+      </div>
+
       <div class="container-fluid">
         <div class="collapse navbar-collapse text-center" id="navbarCollapse">
 
