--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
 		<noscript>
 		<a href="http://click.hotlog.ru/?2575836" target="_blank"><img
 		src="http://hit20.hotlog.ru/cgi-bin/hotlog/count?s=2575836&amp;im=501" border="0"
-		alt="HotLog"></a>
+		width="1" height="1" alt="HotLog"></a>
 		</noscript>
 		<!-- /HotLog -->
 
