--- a/index.html
+++ b/index.html
@@ -358,15 +358,13 @@
     <div class="container">
       <div class="row">
         <div class="col-sm">
-          1 - поділитися Твітер/Фейсбук/Телеграм/Скайп/Вайбер/Ок/Вк/
+          Телеграм/Твітер/Фейсбук/Скайп/Вайбер/Вк/
         </div>
         <div class="col-sm">
-          2 - ссилка на форум
-          <br> 2 - ссилка на сайт
+          Ссилка на форум
         </div>
         <div class="col-sm">
-          3 - контакт (пошта1)
-          <br> 3 - контакт (телеграм/скайп)
+          Пошта/телеграм/скайп
         </div>
         <div class="col-sm">
 
