--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm">
-          Телеграм/Твітер/Фейсбук/Скайп/Вайбер/Вк/
+          Телег/Фейс/Скай/Вайб/Вк/
         </div>
         <div class="col-sm">
           Ссилка на форум
