--- a/index.html
+++ b/index.html
@@ -959,13 +959,21 @@
     <div class="container">
       <div class="row">
         <div class="col-sm">
-          Телег/Фейс/Скай/Вайб/Вк/
+		
+        Телег/Фейс/Скай/Вайб/Вк/
+		  
         </div>
         <div class="col-sm">
-          Ссилка на форум
+		
+		<a href="http://sis.at.ua/forum/14" target="_blank">Обсуждение сайта</a>
+			
         </div>
         <div class="col-sm">
-          Пошта/телеграм/скайп
+		
+		<a href="skype:webersis?chat">webersis<i class="fa fa-skype fa-2x" aria-hidden="true"></i></a>
+		<a href="mailto:weber515sis@gmail.com">weber515sis@gmail.com<i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
+		<a href="https://telegram.me/zakladki_top">Telegram<i class="fa fa-telegram fa-2x" aria-hidden="true"></i></a>
+		         
         </div>
         <div class="col-sm">
 
