--- a/index.html
+++ b/index.html
@@ -970,10 +970,13 @@
         </div>
         <div class="col-sm">
 		
-		<a href="skype:webersis?chat">webersis<i class="fa fa-skype fa-2x" aria-hidden="true"></i></a>
-		<a href="mailto:weber515sis@gmail.com">weber515sis@gmail.com<i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
-		<a href="https://telegram.me/zakladki_top">Telegram<i class="fa fa-telegram fa-2x" aria-hidden="true"></i></a>
-		         
+		<a href="skype:webersis?chat" target="_blank">webersis<i class="fa fa-skype fa-2x" aria-hidden="true"></i></a>
+		<a href="mailto:weber515sis@gmail.com" target="_blank">weber515sis@gmail.com<i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
+		<a href="https://telegram.me/zakladki_top" target="_blank">Telegram<i class="fa fa-telegram fa-2x" aria-hidden="true"></i></a>
+		 
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+		 
+		 
         </div>
         <div class="col-sm">
 
