--- a/index.html
+++ b/index.html
@@ -961,14 +961,20 @@
         <div class="col-sm">
 		
         <center>
-		Телег/Фейс/Скай/Вайб/Вк/
+		<i class="fab fa-telegram fa-2x"></i>
+		<i class="fab fa-facebook-square fa-2x"></i>
+		<i class="fab fa-twitter-square fa-2x"></i>
+		<i class="fab fa-odnoklassniki-square fa-2x"></i>
+		<i class="fab fa-google-plus-square fa-2x"></i>
+		<i class="fab fa-vk fa-2x"></i>
+		<i class="fab fa-viber fa-2x"></i>
 		</center>
 		  
         </div>
         <div class="col-sm">
 		
 		<center>
-		<a href="http://sis.at.ua/forum/14" target="_blank">Обсуждение сайта</a>
+		<a href="http://sis.at.ua/forum/14" target="_blank">!!!Обсуждение сайта!!!</a>
 		</center>
 			
         </div>
@@ -976,8 +982,8 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
 		<center>
-		<a href="skype:webersis?chat" target="_blank" title="SKYPE: webersis"><i class="fab fa-skype fa-2x" aria-hidden="true"></i></a>
-		<a href="mailto:weber515sis@gmail.com" target="_blank" title="E-mail: weber515sis@gmail.com"><i class="far fa-envelope fa-2x" aria-hidden="true"></i></a>
+		<a href="skype:webersis?chat" target="_blank" title="SKYPE: webersis"><i class="fab fa-skype fa-2x" aria-hidden="true"></i></a>&nbsp;
+		<a href="mailto:weber515sis@gmail.com" target="_blank" title="E-mail: weber515sis@gmail.com"><i class="far fa-envelope fa-2x" aria-hidden="true"></i></a>&nbsp;
 		<a href="https://telegram.me/zakladki_top" target="_blank" title="Telegram: https://t.me/zakladki_top"><i class="fab fa-telegram fa-2x" aria-hidden="true"></i></a>
 		</center>		 
 		 
