--- a/index.html
+++ b/index.html
@@ -961,14 +961,15 @@
         <div class="col-sm">
 		
         <center>
-		<i class="fab fa-telegram fa-2x"></i>
-		<i class="fab fa-facebook-square fa-2x"></i>
-		<i class="fab fa-twitter-square fa-2x"></i>
-		<i class="fab fa-odnoklassniki-square fa-2x"></i>
-		<i class="fab fa-google-plus-square fa-2x"></i>
-		<i class="fab fa-vk fa-2x"></i>
-		<i class="fab fa-viber fa-2x"></i>
+		<a href="javascript:void(0);" class="tg"><i class="fab fa-telegram fa-2x"></i>
+		<a href="javascript:void(0);" class="fb"><i class="fab fa-facebook-square fa-2x"></i>
+		<a href="javascript:void(0);" class="tw"><i class="fab fa-twitter-square fa-2x"></i>
+		<a href="javascript:void(0);" class="ok"><i class="fab fa-odnoklassniki-square fa-2x"></i>
+		<a href="javascript:void(0);" class="gp"><i class="fab fa-google-plus-square fa-2x"></i>
+		<a href="javascript:void(0);" class="vk"><i class="fab fa-vk fa-2x"></i>
+		<a href="javascript:void(0);" class="vb"><i class="fab fa-viber fa-2x"></i>
 		</center>
+		  
 		  
         </div>
         <div class="col-sm">
