--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <li class="nav-item"><a class="nav-link" id="komynal-tab" data-toggle="pill" href="#komynal" role="tab" aria-controls="komynal" aria-selected="false">Комуналка</a></li>
             <li class="nav-item"><a class="nav-link" id="drygoe-tab" data-toggle="pill" href="#drygoe" role="tab" aria-controls="drygoe" aria-selected="false">Другое</a></li>
             <li class="nav-item"><a class="nav-link" id="gorodok-tab" data-toggle="pill" href="#gorodok" role="tab" aria-controls="gorodok" aria-selected="false">"Городок"</a></li>
-            <li class="nav-item"><a class="nav-link" id="reklama-tab" data-toggle="pill" href="#reklama" role="tab" aria-controls="reklama" aria-selected="false">"Свекла"</a></li>
+            <li class="nav-item"><a class="nav-link" id="rek-tab" data-toggle="pill" href="#rek" role="tab" aria-controls="rek" aria-selected="false">"Свекла"</a></li>
           </ul>
 
         </div>
@@ -897,7 +897,7 @@
 
 
 
-        <div class="tab-pane fade" id="reklama" role="tabpanel" aria-labelledby="reklama-tab">
+        <div class="tab-pane fade" id="rek" role="tabpanel" aria-labelledby="rek-tab">
           <div class="row">
 		  
             <div class="col-sm">
