--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <li class="nav-item"><a class="nav-link" id="komynal-tab" data-toggle="pill" href="#komynal" role="tab" aria-controls="komynal" aria-selected="false">Комуналка</a></li>
             <li class="nav-item"><a class="nav-link" id="drygoe-tab" data-toggle="pill" href="#drygoe" role="tab" aria-controls="drygoe" aria-selected="false">Другое</a></li>
             <li class="nav-item"><a class="nav-link" id="gorodok-tab" data-toggle="pill" href="#gorodok" role="tab" aria-controls="gorodok" aria-selected="false">"Городок"</a></li>
-            <li class="nav-item"><a class="nav-link" id="rek-tab" data-toggle="pill" href="#rek" role="tab" aria-controls="rek" aria-selected="false">"Свекла"</a></li>
+            <li class="nav-item"><a class="nav-link" id="rek-tab" data-toggle="pill" href="#rek" role="tab" aria-controls="rek" aria-selected="false">"Реклама"</a></li>
           </ul>
 
         </div>
