--- a/index.html
+++ b/index.html
@@ -988,6 +988,23 @@
 				"border='0' width='88' height='15'><\/a>")
 				</script><!--/LiveInternet-->
 
+				<!-- MyCounter v.2.0 -->
+				<script type="text/javascript"><!--
+				my_id = 168145;
+				my_width = 88;
+				my_height = 31;
+				my_alt = "MyCounter - счётчик и статистика (посетителей и хитов сегодня)";
+				//--></script>
+				<script type="text/javascript"
+				  src="https://get.mycounter.ua/counter2.0.js">
+				</script><noscript>
+				<a target="_blank" href="https://mycounter.ua/"><img
+				src="https://get.mycounter.ua/counter.php?id=168145"
+				title="MyCounter - счётчик и статистика (посетителей и хитов сегодня)"
+				alt="MyCounter - счётчик и статистика (посетителей и хитов сегодня)"
+				width="88" height="31" border="0" /></a></noscript>
+				<!--/ MyCounter -->
+
 				<!-- HotLog -->
 				<span id="hotlog_counter"></span>
 				<span id="hotlog_dyn"></span>
