--- a/index.html
+++ b/index.html
@@ -990,20 +990,21 @@
 
 				<!-- MyCounter v.2.0 -->
 				<script type="text/javascript"><!--
-				my_id = 168146;
+				my_id = 168151;
 				my_width = 88;
 				my_height = 31;
-				my_alt = "MyCounter - счётчик и статистика (посетителей и хитов сегодня)";
+				my_alt = "MyCounter - счётчик и статистика";
 				//--></script>
 				<script type="text/javascript"
 				  src="https://get.mycounter.ua/counter2.0.js">
 				</script><noscript>
 				<a target="_blank" href="https://mycounter.ua/"><img
-				src="https://get.mycounter.ua/counter.php?id=168146"
-				title="MyCounter - счётчик и статистика (посетителей и хитов сегодня)"
-				alt="MyCounter - счётчик и статистика (посетителей и хитов сегодня)"
+				src="https://get.mycounter.ua/counter.php?id=168151"
+				title="MyCounter - счётчик и статистика"
+				alt="MyCounter - счётчик и статистика"
 				width="88" height="31" border="0" /></a></noscript>
 				<!--/ MyCounter -->
+
 
 				<!-- HotLog -->
 				<span id="hotlog_counter"></span>
