--- a/index.html
+++ b/index.html
@@ -978,13 +978,13 @@
 			<div class="kolobok">
 				<!--LiveInternet counter--><script type="text/javascript">
 				document.write("<a href='//www.liveinternet.ru/click' "+
-				"target=_blank><img src='//counter.yadro.ru/hit?t14.11;r"+
+				"target=_blank><img src='//counter.yadro.ru/hit?t52.10;r"+
 				escape(document.referrer)+((typeof(screen)=="undefined")?"":
 				";s"+screen.width+"*"+screen.height+"*"+(screen.colorDepth?
 				screen.colorDepth:screen.pixelDepth))+";u"+escape(document.URL)+
 				";h"+escape(document.title.substring(0,150))+";"+Math.random()+
-				"' alt='' title='LiveInternet: показано число просмотров за 24"+
-				" часа, посетителей за 24 часа и за сегодня' "+
+				"' alt='' title='LiveInternet: показано число просмотров и"+
+				" посетителей за 24 часа' "+
 				"border='0' width='88' height='31'><\/a>")
 				</script><!--/LiveInternet-->
 
