--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
-  <title>ZAKLADKI-список популярных сайтов</title>
+  <title>ZAKLADKI - Список популярных сайтов</title>
 </head>
 
 <body>
